--- a/index.html
+++ b/index.html
@@ -118,22 +118,22 @@
                     </div>
                 </div>
                 <div class="col-lg-6 pb-5">
-                    <h4 class="mb-4">Tempor erat elitr rebum clita. Diam dolor diam ipsum erat lorem sed stet labore lorem sit clita duo</h4>
-                    <p class="mb-5">Tempor erat elitr at rebum at at clita. Diam dolor diam ipsum et tempor sit. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor eirmod magna dolore erat amet magna</p>
+                    <h4 class="mb-4">About ALREY KITCHEN</h4>
+                    <p class="mb-5">Alrey Kitchen merupakan sebuah bisnis kue yang menghasilkan beragam kue berkualitas tinggi dengan resep yang unik dan bahan-bahan segar, untuk memberikan pengalaman rasa yang tak terlupakan bagi pelanggan kami.</p>
                     <div class="row g-5">
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center justify-content-center bg-primary border-inner mb-4" style="width: 90px; height: 90px;">
                                 <i class="fa fa-heartbeat fa-2x text-white"></i>
                             </div>
                             <h4 class="text-uppercase">100% Healthy</h4>
-                            <p class="mb-0">Labore justo vero ipsum sit clita erat lorem magna clita nonumy dolor magna dolor vero</p>
+                            <p class="mb-0">Bahan-bahan yang kami gunakan merupakan bahan alami tanpa pengawet</p>
                         </div>
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center justify-content-center bg-primary border-inner mb-4" style="width: 90px; height: 90px;">
                                 <i class="fa fa-award fa-2x text-white"></i>
                             </div>
-                            <h4 class="text-uppercase">Award Winning</h4>
-                            <p class="mb-0">Labore justo vero ipsum sit clita erat lorem magna clita nonumy dolor magna dolor vero</p>
+                            <h4 class="text-uppercase">100% Fresh</h4>
+                            <p class="mb-0">Semua makanan yang tersedia merupakan makanan yang fresh from the oven</p>
                         </div>
                     </div>
                 </div>
