--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 </div>
                 <div class="col-lg-6 pb-5">
                     <h4 class="mb-4">About ALREY KITCHEN</h4>
-                    <p class="mb-5">Alrey Kitchen merupakan sebuah bisnis kue yang menghasilkan beragam kue berkualitas tinggi dengan resep yang unik dan bahan-bahan segar, untuk memberikan pengalaman rasa yang tak terlupakan bagi pelanggan kami.</p>
+                    <p class="mb-5">Kami berkomitmen untuk selalu menghadirkan kue-kue terbaik yang dibuat dengan hati dan kesempurnaan dalam setiap detailnya, sehingga setiap gigitan kue menjadi sebuah momen spesial yang tak terlupakan. Kami juga senantiasa memperhatikan kebutuhan pelanggan dan selalu berinovasi untuk menjaga kualitas dan keberlanjutan bisnis kami.</p>
                     <div class="row g-5">
                         <div class="col-sm-6">
                             <div class="d-flex align-items-center justify-content-center bg-primary border-inner mb-4" style="width: 90px; height: 90px;">
