--- a/index.html
+++ b/index.html
@@ -336,16 +336,16 @@
     <!-- Team End -->
 
 
-    <!-- Offer Start -->
+      <!-- Offer Start -->
     <div class="container-fluid bg-offer my-5 py-5">
         <div class="container py-5">
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-7 text-center">
                     <div class="section-title position-relative text-center mx-auto mb-4 pb-3" style="max-width: 600px;">
-                        <h2 class="text-primary font-secondary">Special Kombo Pack</h2>
-                        <h1 class="display-4 text-uppercase text-white">Super Crispy Cakes</h1>
+                        <h2 class="text-primary font-secondary">Special Ramadhan</h2>
+                        <h1 class="display-4 text-uppercase text-white">Paket Kue Lebaran</h1>
                     </div>
-                    <p class="text-white mb-4">Eirmod sed tempor lorem ut dolores sit kasd ipsum. Dolor ea et dolore et at sea ea at dolor justo ipsum duo rebum sea. Eos vero eos vero ea et dolore eirmod et. Dolores diam duo lorem. Elitr ut dolores magna sit. Sea dolore sed et.</p>
+                    <p class="text-white mb-4">Dalam menyambut bulan suci Ramadhan, kami menawarkan promo spesial Ramadhan dengan diskon menarik untuk produk kue kami, sehingga pelanggan dapat menikmati sajian kue yang lezat dan berkualitas tinggi dengan harga yang lebih terjangkaus.</p>
                     <a href="" class="btn btn-primary border-inner py-3 px-5 me-3">Shop Now</a>
                     <a href="" class="btn btn-dark border-inner py-3 px-5">Read More</a>
                 </div>
@@ -362,9 +362,9 @@
                 <div class="col-lg-4 col-md-6 mb-lg-n5">
                     <div class="d-flex flex-column align-items-center justify-content-center text-center h-100 bg-primary border-inner p-4">
                         <a href="index.html" class="navbar-brand">
-                            <h1 class="m-0 text-uppercase text-white"><i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>CakeZone</h1>
+                            <h1 class="m-0 text-uppercase text-white"><i class="fa fa-birthday-cake fs-1 text-dark me-3"></i>AlreyKitchen</h1>
                         </a>
-                        <p class="mt-3">Lorem diam sit erat dolor elitr et, diam lorem justo labore amet clita labore stet eos magna sit. Elitr dolor eirmod duo tempor lorem, elitr clita ipsum sea. Nonumy rebum et takimata ea takimata amet gubergren, erat rebum magna lorem stet eos. Diam amet et kasd eos duo dolore no.</p>
+                        <p class="mt-3">Alrey Kitchen merupakan sebuah bisnis kue yang menghasilkan beragam kue berkualitas tinggi dengan resep yang unik dan bahan-bahan segar, untuk memberikan pengalaman rasa yang tak terlupakan bagi pelanggan kami.</p>
                     </div>
                 </div>
                 <div class="col-lg-8 col-md-6">
@@ -373,15 +373,15 @@
                             <h4 class="text-primary text-uppercase mb-4">Get In Touch</h4>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-geo-alt text-primary me-2"></i>
-                                <p class="mb-0">123 Street, New York, USA</p>
+                                <p class="mb-0">Komplek Villa Japos. Blok H6 No 19, Jalan alamanda. Paninggilan, tanggerang</p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-primary me-2"></i>
-                                <p class="mb-0">info@example.com</p>
+                                <p class="mb-0">alrey.kitchen@gmail.com</p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-telephone text-primary me-2"></i>
-                                <p class="mb-0">+012 345 67890</p>
+                                <p class="mb-0">+6285156216110</p>
                             </div>
                             <div class="d-flex mt-4">
                                 <a class="btn btn-lg btn-primary btn-lg-square border-inner rounded-0 me-2" href="#"><i class="fab fa-twitter fw-normal"></i></a>
