--- a/index.html
+++ b/index.html
@@ -326,37 +326,39 @@
 
 
     <!-- Service Start -->
+    <section id="service" class="service">
     <div class="container-fluid service position-relative px-5 mt-5" style="margin-bottom: 135px;">
         <div class="container">
             <div class="row g-5">
                 <div class="col-lg-4 col-md-6">
                     <div class="bg-primary border-inner text-center text-white p-5">
-                        <h4 class="text-uppercase mb-3">Birthday Cake</h4>
-                        <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
+                        <h4 class="text-uppercase mb-3">Paket Reguler</h4>
+                        <p>Kami menawarkan paket reguler berupa kumpulan kue-kue pilihan kami dengan harga yang terjangkau dan tetap berkualitas tinggi, sehingga pelanggan dapat menikmati variasi kue yang lezat dan sehat setiap minggunya.</p>
                         <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="bg-primary border-inner text-center text-white p-5">
-                        <h4 class="text-uppercase mb-3">Wedding Cake</h4>
-                        <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
+                        <h4 class="text-uppercase mb-3">Paket Ramadhan</h4>
+                        <p>Kami menawarkan paket Ramadhan dengan kumpulan kue-kue spesial yang dijamin lezat dan berkualitas tinggi, sehingga pelanggan dapat memperkaya menu berbuka puasa mereka dengan variasi kue yang istimewa dan memenuhi kebutuhan nutrisi harian.</p>
                         <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="bg-primary border-inner text-center text-white p-5">
-                        <h4 class="text-uppercase mb-3">Custom Cake</h4>
-                        <p>Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
+                        <h4 class="text-uppercase mb-3">Custom Ramadhan</h4>
+                        <p>Kami juga menawarkan paket kustom Ramadhan yang dapat disesuaikan dengan kebutuhan dan preferensi pelanggan, mulai dari pilihan kue, ukuran, hingga dekorasi yang menarik dan sesuai tema Ramadhan. sehingga  pelanggan dapat merayakan momen spesial bersama keluarga dan teman-teman dengan sajian kue yang unik dan personal.</p>
                         <a class="text-uppercase text-dark" href="">Read More <i class="bi bi-arrow-right"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-12 col-md-6 text-center">
-                    <h1 class="text-uppercase text-light mb-4">30% Discount For This Summer</h1>
+                    <h1 class="text-uppercase text-light mb-4">30% Discount For Ramadhan</h1>
                     <a href="" class="btn btn-primary border-inner py-3 px-5">Order Now</a>
                 </div>
             </div>
         </div>
     </div>
+</section>
     <!-- Service Start -->
 
 
