--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 
 
     <!-- About Start -->
+    <section id="about" class="about">
     <div class="container-fluid pt-5">
         <div class="container">
             <div class="section-title position-relative text-center mx-auto mb-5 pb-3" style="max-width: 600px;">
@@ -140,6 +141,7 @@
             </div>
         </div>
     </div>
+    </section>
     <!-- About End -->
 
 
@@ -406,6 +408,7 @@
 
 
       <!-- Offer Start -->
+    <section id="offer" class="offer">
     <div class="container-fluid bg-offer my-5 py-5">
         <div class="container py-5">
             <div class="row gx-5 justify-content-center">
@@ -421,6 +424,7 @@
             </div>
         </div>
     </div>
+    </section>
     <!-- Offer End -->
     
 
